🐛 FIX: layout issues

--- a/src/scss/blocks/_burger-menu.scss
+++ b/src/scss/blocks/_burger-menu.scss
@@ -56,7 +56,7 @@
 .burger-menu[status="open"] .logo-mobile {
   position: absolute;
   display: block;
-  inset-block-start: 5rem;
+  inset-block-start: 2.5rem;
   inset-inline-start: 2rem;
 }
 
